--- a/index.html
+++ b/index.html
@@ -8,24 +8,26 @@
     <link rel="shortcut icon" href="./images/favicon-32x32.png" type="image/x-icon">
 </head>
 <body>
-    <main>
-        <div id="background"></div>
-        <section id="cards"> <!-- Vai receber um Positio Absolute para sair do fluxo-->
-            <img src="./images/bg-card-front.png" alt="front of card">
-            <img src="./images/bg-card-back.png" alt="back of card">
+    <main><!-- Corpo principal-->
+        <section id="cards"> <!-- Frente e Verso do Cartão -->
+            <img src="./images/bg-card-front.png" alt="front of card" id="front">
+            <img src="./images/bg-card-back.png" alt="back of card" id="back">
         </section>
-        <section id="form">
+        <section id="form"> <!-- Formulário que recebe os dados do usuário -->
             <form action="#">
-                <label for="fname">Cardholder Name</label>
+                <label for="fname">Cardholder Name</label> <!-- Nome do Usuário -->
                 <input type="text" id="fname" placeholder="e.g. Jane Appleseed" autofocus>
-                <label for="number">Card Number</label>
-                <input type="number" id="number" placeholder="e.g. 1234 5678 9123 0000">
-                <label for="date">Exp. Date (mm/yy)</label>
-                <input type="text
-                " size="2" pattern="[01-12]{2}" maxlength="2" id="date" placeholder="MM">
-                <input type="text" size="2" pattern="[01-99]{2}" maxlength="2" id="date" placeholder="YY">
-                <label for="cvc">Cvc</label>
-                <input type="text" pattern="[000-999]{3}" maxlength="3" id="cvc" placeholder="e.g. 123">
+                <label for="number">Card Number</label> <!-- Numero do cartão -->
+                <input type="text" id="number" placeholder="e.g. 1234 5678 9123 0000">
+                <fieldset> <!-- Grupo que define o vencimento e o código de segurança-->
+                    <label for="date" id="data">Exp. Date (mm/yy)</label>
+                    <label for="cvc">Cvc</label>
+                    <fieldset id="inputs">
+                        <input type="text" size="2" pattern="[01-12]{2}" maxlength="2" id="date" placeholder="MM">
+                        <input type="text" size="2" pattern="[01-99]{2}" maxlength="2" id="year" placeholder="YY">
+                        <input type="text" pattern="[000-999]{3}" maxlength="3" id="cvc" placeholder="e.g. 123">
+                    </fieldset>
+                </fieldset>
                 <input type="submit" value="Confirm">
             </form>
         </section>
