--- a/index.html
+++ b/index.html
@@ -10,8 +10,19 @@
 <body>
     <main><!-- Corpo principal-->
         <section id="cards"> <!-- Frente e Verso do Cartão -->
-            <img src="./images/bg-card-front.png" alt="front of card" id="front">
-            <img src="./images/bg-card-back.png" alt="back of card" id="back">
+            <div id="front">
+                <div>
+                    <img src="./images/card-logo.svg" alt="">
+                </div>
+                <div id="infos">
+                    <p>0000 0000 0000 0000</p>
+                    <span>JANE APPLESSED</span>
+                    <span>00/00</span>
+                </div>
+            </div>
+            <div id="back">
+                <p>000</p>
+            </div>
         </section>
         <section id="form"> <!-- Formulário que recebe os dados do usuário -->
             <form action="#">
