--- a/index.html
+++ b/index.html
@@ -26,22 +26,29 @@
         </section>
         <section id="form"> <!-- Formulário que recebe os dados do usuário -->
             <form  name="formulario">
-                <label for="fname">Cardholder Name</label> <!-- Nome do Usuário -->
-                <input type="text" id="fname" placeholder="e.g. Jane Appleseed" onfocus="recebe()">
-                <label for="number">Card Number</label> <!-- Numero do cartão -->
-                <input type="text" id="number" placeholder="e.g. 1234 5678 9123 0000">
-                <fieldset> <!-- Grupo que define o vencimento e o código de segurança-->
-                    <label for="date" id="data">Exp. Date (mm/yy)</label>
-                    <label for="cvc">Cvc</label>
-                    <fieldset id="inputs">
-                        <input type="text" size="2" pattern="[01-12]{2}" maxlength="2" id="date" placeholder="MM">
-                        <input type="text" size="2" pattern="[01-99]{2}" maxlength="2" id="year" placeholder="YY">
-                        <input type="text" pattern="[000-999]{3}" maxlength="3" id="cvc" placeholder="e.g. 123">
-                    </fieldset>
+                <label for="cardHolderName">Cardholder Name</label> <!-- Nome do Usuário -->
+                <input type="text" id="cardHolderName" placeholder="e.g. Jane Appleseed">
+
+                <label for="cardNumer">Card Number</label> <!-- Numero do cartão -->
+                <input type="text" id="cardNumer" placeholder="e.g. 1234 5678 9123 0000">
+
+                <label for="month">Exp. Date (mm/yy)</label>
+                <label for="cvc">Cvc</label>
+                <fieldset>
+                    <input type="text" pattern="[01-12]{2}" maxlength="2" id="month" placeholder="MM">
+                    <input type="text" pattern="[01-99]{2}" maxlength="2" id="year" placeholder="YY">
+                    <input type="text" pattern="[000-999]{3}" maxlength="3" id="cvc" placeholder="e.g. 123">
                 </fieldset>
+
                 <input type="submit" value="Confirm">
             </form>
+            <div id="thankYou">
+                <p>Thank You!</p>
+                <span>We've added your card details</span>
+                <input type="submit" value="Continue">
+            </div>
         </section>
+
     </main>
 
     <script src="script.js"></script>
