--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
                                 placeholder="e.g. Jane Appleseed"
                                 required
                                 autocomplete="off"
+                                onkeyup="cardHolder()"
                                 >
-                                <small class="erro">Wrong format, letters only</small>
+                                <small class="erro_card_name erro">Wrong format, letters only</small>
                             </div>
                         </div>
                         <div id="grid_2">
